[gd_scene load_steps=5 format=2]

[ext_resource path="res://img/Space_01-Sheet.png" type="Texture" id=1]
[ext_resource path="res://background/Background.gd" type="Script" id=2]
[ext_resource path="res://background/BackgroundParticlesDebris.tscn" type="PackedScene" id=3]
[ext_resource path="res://background/BackgroundParticlesAsteroids.tscn" type="PackedScene" id=4]

[node name="Background" type="CanvasLayer"]
layer = -100
script = ExtResource( 2 )

[node name="BackgroundParticlesDebris" parent="." instance=ExtResource( 3 )]

[node name="BackgroundParticlesAsteroids" parent="." instance=ExtResource( 4 )]

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
unique_name_in_owner = true
layer = -101

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 500, 500 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
texture = ExtResource( 1 )
centered = false
vframes = 5

[node name="ParallaxLayer2" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0, 0 )
motion_mirroring = Vector2( 500, 500 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer2"]
texture = ExtResource( 1 )
centered = false
vframes = 5
frame = 1

[node name="ParallaxLayer3" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0, 0 )
motion_mirroring = Vector2( 500, 500 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer3"]
texture = ExtResource( 1 )
centered = false
vframes = 5
frame = 2

[node name="ParallaxLayer4" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0, 0 )
motion_mirroring = Vector2( 500, 500 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer4"]
texture = ExtResource( 1 )
centered = false
vframes = 5
frame = 3

[node name="ParallaxLayer5" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0, 0 )
motion_mirroring = Vector2( 500, 500 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer5"]
texture = ExtResource( 1 )
centered = false
vframes = 5
frame = 4
